--- a/package.json
+++ b/package.json
@@ -28,10 +28,21 @@
   "dependencies": {
     "mongodb": "2.0.35",
     "mongoose": "^4.4.4",
-    "underscore": "1.5.2"
+    "underscore": "1.5.2", 
+    "express": "4.12.3", 
+    "express-session": "1.11.2",
+    "mocha": "2.2.4",
+    "superagent": "1.2.0",
+    "http-status": "0.1.8",
+    "wagner-core": "0.1.0", 
+    "body-parser": "1.12.4",
+    "passport": "0.2.2",
+    "passport-facebook": "2.0.0",
+    "stripe": "3.3.4"
   },
   "devDependencies": {
     "gulp": "3.9.0",
+    "superagent": "1.2.0",
     "gulp-mocha": "2.0.1",
     "mocha": "2.2.4"
   }
